--- a/compose-demo1/docker-compose.yml
+++ b/compose-demo1/docker-compose.yml
@@ -7,14 +7,23 @@ networks:
       driver: default
       config:
         - subnet: 162.16.0.0/16
-
-volumes:
-  myweb: 
     
 services:
+  lb:
+    image: mahendrshinde/nginx-lb:1
+    networks:
+    - mynet
+    environment:
+      app_srv: web
+      app_port: 80
+
+    ports:
+    - 9000:80
+
   web:
     image: mahendrshinde/myweb
-    ports:
-      - 9000:80
-    volumes:
-      - myweb:/usr/share/nginx/logs
+    deploy:
+      replicas: 3
+    networks:
+    - mynet
+    
